--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio pessoal</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
     
+    <!-- Menu superior/header -->
+    <header>
+        <div class="container">
+            <div class="logo">
+                <a href="#"><img src="./img/Wendler logo.svg" alt=""></a>
+            </div>
+            
+            <nav class="menu">
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Projetos</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="#">Sobre</a></li>
+            </ul>
+            </nav>
+
+            <div class="botao-contato">
+                <a href="#"><button class="muda-cor">Contato</button></a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
