--- a/index.html
+++ b/index.html
@@ -30,5 +30,26 @@
             </div>
         </div>
     </header>
+
+    <!-- Main um poco sobre mim e minha foto -->
+    <main>
+        <section class="container-site">
+
+            <div class="texto-site"><h1>transformando sonhos em realidade<span class="ponto-azul">.</span></h1>
+            </div>
+
+            <div class="informacoes"><p> Com habilidades em HTML, CSS, JavaScript e diversas outras linguagens, tenho expertise em construir interfaces intuitivas e robustas, além de desenvolver a lógica do aplicativo e gerenciar bancos de dados.</p>
+            </div>
+
+            <div class="botao-meio">
+                <a href="#">Entre em contato</a>
+            </div>
+            
+            <div class="minha-imagem">
+                <img src="./img/minha imagem.png" alt="">
+            </div>
+        </section>
+    </main>
+
 </body>
 </html>
