--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="#"><img src="./img/Wendler logo.svg" alt=""></a>
+                <a href="inicio.html"><img src="./img/Wendler logo.svg" alt=""></a>
             </div>
             
             <nav class="menu">
             <ul>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="inicio.html">Inicio</a></li>
                 <li><a href="#">Projetos</a></li>
                 <li><a href="#">Contato</a></li>
                 <li><a href="#">Sobre</a></li>
