--- a/inicio.html
+++ b/inicio.html
@@ -18,15 +18,15 @@
             
             <nav class="menu">
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="./inicio.html">Inicio</a></li>
+                <li><a href="./projetos.html">Projetos</a></li>
+                <li><a href="./habilidades.html">Habilidades</a></li>
+                <li><a href="./sobre.html">Sobre</a></li>
             </ul>
             </nav>
 
             <div class="botao-contato">
-                <a href="#"><button class="muda-cor">Contato</button></a>
+                <a href="./contato.html"><button class="muda-cor">Contato</button></a>
             </div>
         </div>
     </header>
