--- a/sobre.html
+++ b/sobre.html
@@ -32,9 +32,22 @@
     </header>
 
     <!-- Sobre mim -->
-
+    <!-- Main um poco sobre mim e minha foto -->
     <main>
-        
+        <div class="texto-sobre"><h1>Futuro Engenheiro de Software</span></h1>
+        </div>
+        <section class="container-sobre-mim">
+            <div class="informacoes1"><p> Sou um estudante universitário que ama tecnologia. Minha jornada acadêmica tem sido marcada por uma busca incansável pelo conhecimento e uma dedicação inabalável ao desenvolvimento de habilidades técnicas e práticas.</p>
+            </div>
+
+            <div class="informacoes2"><p>Possuo fluência completa no idioma espanhol, tanto verbalmente quanto por escrito, permitindo-me comunicar de forma eficaz e precisa em ambientes profissionais e sociais.</p>
+            </div>
+
+            <div class="informacoes3"><p>Tenho habilidades sólidas em inglês, capaz de compreender e me expressar de forma competente. Estou constantemente buscando melhorar minha proficiência neste idioma.</p>
+            </div>
+
+            <div class="informacoes4"><p>Tenho paixão pela tecnologia e habilidades práticas em programação. Possuo conhecimentos em HTML e CSS para construção de interfaces web, além de um entendimento básico de JavaScript para adicionar interatividade às páginas.</p></div>
+        </section>
     </main>
 
 </body>
