--- a/inicio.html
+++ b/inicio.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="botao-meio">
-                <a href="#">Entre em contato</a>
+                <a href="./contato.html">Entre em contato</a>
             </div>
             
             <div class="minha-imagem">
